# credilinq-blog

./: .dockerignore  .env.example  .env.gemini.example  .env.phase1  .env.production  .gitignore  AGENT_ARCHITECTURE_DIAGRAM.md  AI_AGENT_SCORING_INTEGRATION_USER_STORIES.md  ANALYTICS_CALCULATIONS.md  AUTOMATED_AGENT_EXECUTION_USER_STORIES.md  CAMPAIGNS_REFACTORING.md  CAMPAIGN_EXECUTION_DETAILED_FLOW.md  CLAUDE.md  CONTENT_REVIEW_USER_STORIES.md  DATABASE_IMPROVEMENTS_README.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.railway  FRONTEND_SETUP.md  GEMINI_SETUP.md  IMAGE_AGENT_README.md  IMAGE_GENERATION_FIX.md  IMPLEMENTATION_STATUS.md  INTEGRATION_POLISH_COMPLETION_REPORT.md  PARALLEL_RESEARCH_IMPLEMENTATION_GUIDE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PRODUCTION_SYNC_GUIDE.md  PROMPTS_AGENTES.md  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOYMENT_GUIDE_COMPLETE.md  RAILWAY_FIX_SUMMARY.md  RAILWAY_SETUP.md  README.md  REVIEW_WORKFLOW_ARCHITECTURE.md  ROADMAP.md  (+77 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
checkpoints/: emergency_test_workflow_20250907_200053_98a12736.checkpoint  emergency_test_workflow_20250907_200053_98a12736.metadata  emergency_test_workflow_20250907_200724_bad8d2e8.checkpoint  emergency_test_workflow_20250907_200724_bad8d2e8.metadata  emergency_test_workflow_20250907_200823_0e87408e.checkpoint  emergency_test_workflow_20250907_200823_0e87408e.metadata  emergency_test_workflow_20250907_201046_cbec62b2.checkpoint  emergency_test_workflow_20250907_201046_cbec62b2.metadata  integration_test_workflow_20250907_200053_347f3a58.checkpoint  integration_test_workflow_20250907_200053_347f3a58.metadata  integration_test_workflow_20250907_200724_074508d5.checkpoint  integration_test_workflow_20250907_200724_074508d5.metadata  integration_test_workflow_20250907_200823_4fc99798.checkpoint  (+3 more)
config/: alertmanager.yml  prometheus.yml
(+484 files in other folders)
